--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ external_link:
   enable: true # Open external links in new tab
   field: site # Apply to the whole site
   exclude: ''
-filename_case: 0
+filename_case: 1 # 1: lowercase, 2: uppercase
 render_drafts: false
 post_asset_folder: false
 relative_link: false
