--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://blog.nvn.fyi
+url: https://blog.nvn.fyi
 permalink: :day/:month/:year/:title/
 permalink_defaults:
 pretty_urls:
